--- a/template.cronjob.yml
+++ b/template.cronjob.yml
@@ -8,6 +8,7 @@ spec:
     spec:
       template:
         spec:
+          serviceAccountName: sa-runner
           containers:
           - name: hello
             image: mydags:latest
