--- a/templates/template.serviceaccount.yml
+++ b/templates/template.serviceaccount.yml
@@ -9,9 +9,9 @@ metadata:
   namespace: default
   name: cfg-reader
 rules:
-  - apiGroups: [""] # "" indicates the core API group
-    resources: ["configmaps"]
-    verbs: ["get", "watch", "list"]
+  - apiGroups: ["", "batch"] # "" indicates the core API group
+    resources: ["configmaps", "jobs"]
+    verbs: ["get", "watch", "list", "create"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
