--- a/tutorial__cronjob.yml
+++ b/tutorial__cronjob.yml
@@ -16,7 +16,7 @@ spec:
             command:
             - /bin/sh
             - -c
-            - python3 ./app/run.py tutorial DUMMY_FIRST_TASK
+            - python3 -m kubedag.run tutorial DUMMY_FIRST_TASK
             env:
               - name: AIRFLOW__CORE__SQL_ALCHEMY_CONN
                 value: postgresql+psycopg2://airflow:airflow@airflow-db/airflow
